# schc_quinn

./: .gitignore  .gitmodules  README.md
workbench/: LICENSE-APACHE  LICENSE-MIT  quinn_workbench_architecture.md  readme.md
workbench/golden-tests/tests/fullmars-big-payload/: expected-stdout.tokio
workbench/in-memory-network/: Cargo.toml
workbench/in-memory-network/src/: lib.rs  schc_compressor.rs  schc_observer.rs
workbench/in-memory-network/src/network/: mod.rs
workbench/quinn-workbench/: Cargo.toml
workbench/quinn-workbench/src/config/: cli.rs  quinn.rs
workbench/quinn-workbench/src/quic/: mod.rs  simulation.rs
workbench/test-data/earth-mars/: networkgraph-5nodes.json  networkgraph-fullmars.json
workbench/test-data/earth-moon/: networkgraph-1orbiter-1moonasset.json  networkgraph-schc-2nodes.json
workbench/test-data/earth-voyager/: networkgraph.json
workbench/test-data/trivial/: networkgraph-2nodes.json
